--- a/EuFaco/Web.config
+++ b/EuFaco/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ConnectionEstudo" providerName="System.Data.SqlClient" connectionString="xxx" />
-    <add name="ConnectionEstudoServidor" providerName="System.Data.SqlClient" connectionString="xxx" />
+    <add name="ConnectionEstudo" providerName="System.Data.SqlClient" connectionString="xxxxx" />
+    <add name="ConnectionEstudoServidor" providerName="System.Data.SqlClient" connectionString="xxxxx" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
